Rework of the designer settings panel (#2434)
It will now fetch available settings for the selected entities and show only them in the settings panel. To avoid getting circular updates a new settings model has been created.